force-app/main/default/objects/Spare_Part_Request__c.object
<CustomObject>
    <fields>
        <fullName>Available_Quantity__c</fullName>
        <label>Available Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IC__c</fullName>
        <description>Item Category</description>
        <label>IC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_Message__c</fullName>
        <label>Integration Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Integration_Status__c</fullName>
        <label>Integration Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Item_No_Value__c</fullName>
        <label>Item No Value</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Item_No__c</fullName>
        <label>Item No</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operation__c</fullName>
        <label>Operation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderOrderOperation__c</fullName>
        <externalId>true</externalId>
        <label>OrderOrderOperation</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Order_Operation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Operation</label>
        <referenceTo>Order_Operation__c</referenceTo>
        <relationshipLabel>Spare Part Requests</relationshipLabel>
        <relationshipName>Spare_Part_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipLabel>Spare Part Requests</relationshipLabel>
        <relationshipName>Spare_Part_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Plant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plant</label>
        <referenceTo>Master_Map__c</referenceTo>
        <relationshipLabel>Spare Part Requests</relationshipLabel>
        <relationshipName>Spare_Part_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_Material_Quantity__c</fullName>
        <label>Request Material Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Request_Status__c</fullName>
        <label>Request Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Pending for Approval</fullName>
                </value>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                    <isActive>false</isActive>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Pending for Approved</fullName>
                    <isActive>false</isActive>
                    <label>Pending for Approved</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Spare_Part_Stock__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Spare Part Stock</label>
        <referenceTo>Spare_Part_Stock__c</referenceTo>
        <relationshipLabel>Spare Part Requests</relationshipLabel>
        <relationshipName>Spare_Part_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Spare_Part__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Spare Part</label>
        <referenceTo>Spare_Part__c</referenceTo>
        <relationshipLabel>Spare Part Requests</relationshipLabel>
        <relationshipName>Spare_Part_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UM__c</fullName>
        <label>UM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isIRPA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isIRPA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isSOAP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isSOAP</label>
        <type>Checkbox</type>
    </fields>
    <label>Spare Part Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Order__c</columns>
        <columns>Request_Status__c</columns>
        <columns>Spare_Part__c</columns>
        <columns>Item_No__c</columns>
        <columns>Item_No_Value__c</columns>
        <columns>OrderOrderOperation__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Spare Part Request Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>